# unicloud

./: Procfile  package.json  pnpm-lock.yaml  readme.md  tsconfig.json  turbo.json
.github/workflows/: aarch64.yml
apps/api/: .env.example  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/api/src/: config.ts  index.ts
apps/api/src/auth/: driveAuth.ts  googleAuthRouter.ts  googleDriveAuth.ts  passport.ts  route.ts
apps/api/src/middlewares/: requireAuth.ts  session.ts
apps/api/src/routes/linkCloud/: googleDrive.ts
apps/api/src/utils/: encryption.ts
apps/api/types/: express.d.ts
apps/web/: .env.example  next.config.js  package.json
apps/web/app/: layout.tsx  page.tsx
backend/: .env.example  Cargo.toml
backend/.cargo/: config.toml
backend/libs/common/: Cargo.toml
backend/libs/common/src/: db_connect.rs  enums.rs  export_envs.rs  jwt_config.rs  lib.rs
backend/libs/entities/: Cargo.toml
backend/libs/entities/src/: cloud_account.rs  job.rs  quota.rs
backend/migration/src/: lib.rs  m20251101_100506_create_more_required_tables.rs  m20251210_150222_add_image_to_cloud_account.rs  m20251225_162600_add_transfer_table.rs  m20260106_135114_add_claims_to_job.rs  m20260130_160138_edit_permission_to_string_from_uuid.rs  m20260215_132415_add_soft_delete_on_cloud_account.rs  m20260216_125737_add_job_name.rs  m20260217_052114_add_time_and_finished_at_in_jobs.rs  m20260702_041235_add_refresh_at_in_quota.rs
backend/services/api/: Cargo.toml
backend/services/api/src/: main.rs
backend/services/api/src/handlers/: mod.rs
backend/services/api/src/handlers/auth/: add_google_drive.rs  login_with_google.rs  logout.rs  mod.rs
backend/services/api/src/handlers/cloud/: copy_google.rs  delete_file_google.rs  edit_jobs.rs  get_cloud_accounts.rs  get_jobs.rs  mod.rs  remove_google_account.rs
backend/services/api/src/handlers/user/: edit_jobs.rs  get_jobs.rs  get_quota.rs  mod.rs
backend/services/api/src/routers/: auth_router.rs  cloud_router.rs  mod.rs  user_router.rs
backend/services/api/src/utils/: middleware.rs
backend/services/refresh-worker/: Cargo.toml
backend/services/refresh-worker/src/: handle_refresh.rs  main.rs
backend/services/transfer-worker/: Cargo.toml
backend/services/transfer-worker/src/: job.rs  main.rs
backend/services/transfer-worker/src/handlers/: google_to_google.rs  mega_to_google.rs  mod.rs
backend/services/transfer-worker/src/helpers/: create_permission.rs  fetch_permission_google.rs  mod.rs  progress_pub.rs  refresh_clouds.rs  share_google.rs
backend/services/ws/: Cargo.toml
backend/services/ws/src/: main.rs  socket_upgrade.rs
backend/services/ws/src/handlers/: mod.rs  ws_handle.rs
backend/services/ws/src/handlers/helpers/: subscriber.rs
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(clouds)/home/: page.tsx
frontend/app/(clouds)/info/: page.tsx
frontend/app/privacy-policy/: page.tsx
frontend/app/terms-of-service/: page.tsx
frontend/components/: DriveComponent.tsx  HomeComponent.tsx  WSProvider.tsx
frontend/lib/: ws-client.ts
frontend/stores/auth/: types.ts  useAuthStore.ts
frontend/stores/cloud/: types.ts  useCloudStore.ts
frontend/stores/user/: types.ts  useUserStore.ts
frontend/utils/: format.ts
turbo/generators/: config.ts  package.json
turbo/generators/templates/: react-component.hbs
