[package]
name = "transfer-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
redis = { workspace = true }
entities = { workspace = true }
common = { workspace = true }
tokio = { workspace = true }
sea-orm = { version = "2.0.0-rc.16", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1.0.145"
futures = "0.3.31"
futures-util = "0.3.31"
url = "2.5.7"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1.18.1", features = ["v4"] }
axum = { version = "0.8.6", features = ["http2"] }
