[package]
name = "ws"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio = { workspace = true }
common = { workspace = true }
futures-channel = "0.3.31"
url = "2.5.7"
futures-util = "0.3.31"
redis = { version = "0.32.7", features = ["aio", "connection-manager", "tokio-comp"] }
entities = { workspace = true }
sea-orm = { version = "2.0.0-rc.16", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
once_cell = "1.21.3"
serde_json = "1.0.145"
